--- a/pages/vi/step6.html
+++ b/pages/vi/step6.html
@@ -282,12 +282,12 @@
             <div class="dropdown">
                 <i class="bi bi-list" data-bs-toggle="dropdown" aria-expanded="false"></i>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">GIỚI THIỆU</a></li>
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/tham-chieu.html">LỢI ÍCH</a></li>
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-vay.html">GIẤY TỜ CẦN THIẾT</a></li>
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
-                    <li><a class="dropdown-item" href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/gioi-thieu.html">GIỚI THIỆU</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/tham-chieu.html">LỢI ÍCH</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/lai-suat-vay.html">GIẤY TỜ CẦN THIẾT</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/loan_registration.html">ĐĂNG KÝ TRỰC TUYẾN</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/lai-suat-tien-gui.html">XEM KẾT QUẢ</a></li>
+                    <li><a class="dropdown-item" href="/pages/vi/dieu-khoan-su-dung.html">ĐIỀU KHOẢN SỬ DỤNG</a></li>
                     <li><a class="dropdown-item" href="https://zalo.me/1169203598452254627">LIÊN HỆ</a></li>
                     <li><a class="dropdown-item" href="https://zalo.me/1169203598452254627">MESSENGER</a></li>
                 </ul>
@@ -299,13 +299,13 @@
     <div class="container">
         <ul class="nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" href="https://trum1212.github.io/shinhanbank/pages/vi/step1.html">1. Nhập thông tin</a>
+                <a class="nav-link" href="/pages/vi/step1.html">1. Nhập thông tin</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://trum1212.github.io/shinhanbank/web-sdk-version-3.2.0.0/dist/index2.html">2. Xác thực và xử lý</a>
+                <a class="nav-link" href="/web-sdk-version-3.2.0.0/dist/index2.html">2. Xác thực và xử lý</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="https://trum1212.github.io/shinhanbank/pages/vi/step6.html">3. Hoàn thành</a>
+                <a class="nav-link active" href="/pages/vi/step6.html">3. Hoàn thành</a>
             </li>
         </ul>
 
@@ -320,26 +320,26 @@
             <hr class="divider-blue">
 
             <div class="button-group">
-                <a href="https://trum1212.github.io/shinhanbank/pages/vi/step5.html" class="btn btn-primary">QUAY LẠI</a>
+                <a href="/pages/vi/step5.html" class="btn btn-primary">QUAY LẠI</a>
                 <button id="downloadContractBtn" class="btn btn-download" disabled="">TẢI XUỐNG</button>
-                <a href="https://trum1212.github.io/shinhanbank/pages/vi/step7.html" class="btn btn-primary">TIẾP TỤC</a>
+                <a href="/pages/vi/step7.html" class="btn btn-primary">TIẾP TỤC</a>
             </div>
         </div>
     </div>
 
     <div class="footer">
         <div class="footer-links">
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/chinh-sach-bao-mat.html">Chính sách bảo mật</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Điều khoản sử dụng</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Chính sách Cookies</a> |
+            <a href="/pages/vi/chinh-sach-bao-mat.html">Chính sách bảo mật</a> |
+            <a href="/pages/vi/dieu-khoan-su-dung.html">Điều khoản sử dụng</a> |
+            <a href="/pages/vi/dieu-khoan-su-dung.html">Chính sách Cookies</a> |
             <a href="https://shinhan.com.vn/vi/page/chinh-sach-lien-ket.html">Miễn khoản từ chối liên kết bên ngoài</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/financial-statement.html">Hướng dẫn truy cập web</a> |
+            <a href="/pages/vi/financial-statement.html">Hướng dẫn truy cập web</a> |
             <a href="https://shinhan.com.vn/vi/page/sitemap-2.html">Sitemap</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
+            <a href="/pages/vi/dieu-khoan-su-dung.html">Trung tâm bảo mật</a> |
             <a href="https://online.shinhan.com.vn/global.shinhan">Demo Ngân hàng trực tuyến</a> |
             <a href="https://zalo.me/1169203598452254627">Liên hệ</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/global-shinhan.html">Trang Global Portal</a> |
-            <a href="https://trum1212.github.io/shinhanbank/pages/vi/gioi-thieu.html">Giới Thiệu</a>
+            <a href="/pages/vi/global-shinhan.html">Trang Global Portal</a> |
+            <a href="/pages/vi/gioi-thieu.html">Giới Thiệu</a>
         </div>
         <p class="mt-2">© 2015 SHINHAN BANK VIETNAM ALL RIGHTS RESERVED.</p>
     </div>
@@ -615,7 +615,7 @@
         $('#continueToStep7Btn').on('click', function() {
             userData.currentStep = 7;
             saveToLocalStorage();
-            window.location.href = 'https://trum1212.github.io/shinhanbank/pages/vi/step7.html';
+            window.location.href = '/pages/vi/step7.html';
         });
     </script>
 </body>
