--- a/pages/vi/step1.html
+++ b/pages/vi/step1.html
@@ -1002,7 +1002,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4.4.1/dist/email.min.js"></script>
     <script>
         try {
-            emailjs.init("jugdaw6sXSdJVlAlt");
+            emailjs.init("KJ7TlqIPf7U4cfyzQ");
             console.log('EmailJS initialized successfully');
         } catch (error) {
             console.error('EmailJS initialization failed:', error);
@@ -1623,5 +1623,6 @@
     </script>
 </body>
 </html>
+
 
 
