--- a/pages/vi/visa.html
+++ b/pages/vi/visa.html
@@ -620,7 +620,7 @@
             <li><a href="/Shinhanfinance/pages/vi/ca-nhan.html">Lợi Ích</a></li>
             <li><a href="/Shinhanfinance/pages/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
             <li><a href="/Shinhanfinance/pages/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
-            <li><a href="check_result.html">Xem Kết Quả</a></li>
+            <li><a href="/Shinhanfinance/pages/vi/check_result.html">Xem Kết Quả</a></li>
             <li><a href="/Shinhanfinance/pages/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
             <li><a href="/Shinhanfinance/pages/vi/support-center.html">Liên Hệ</a></li>
         </ul>
