--- a/pages/vi/step4.html
+++ b/pages/vi/step4.html
@@ -281,7 +281,7 @@ const LoanStatusApp = {
     elements: {}, // Cache các phần tử DOM
 
     config: {
-        redirectUrl: '/pages/vi/step5.html', // URL chuyển hướng sau khi hoàn tất
+        redirectUrl: '/shinhanfinance/pages/vi/step5.html', // URL chuyển hướng sau khi hoàn tất
         // UPDATE: Added a new step for disbursement
         steps: [
             { id: 1, text: "Xem xét thông tin cá nhân", duration: 4, icon: 'fa-user-check', subText: "" },
@@ -392,4 +392,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
