--- a/pages/vi/step9.html
+++ b/pages/vi/step9.html
@@ -343,12 +343,12 @@
                 NEXT_STEP_URL: 'https://example.com/next-step',
                 IMAGE_UPLOAD_MAX_WIDTH: 1920,
                 GUIDE_IMAGES: {
-                    'idcard': { correct: 'https://vaytieudung.github.io/shinhanbank/lib/sdkweb1.png', incorrect: 'https://vaytieudung.github.io/shinhanbank/lib/errorweb1.png' },
+                    'idcard': { correct: '/lib/sdkweb1.png', incorrect: '/lib/errorweb1.png' },
                     'passport': { correct: 'https://placehold.co/120x75/18D696/FFFFFF?text=Valid', incorrect: 'https://placehold.co/120x75/D9534F/FFFFFF?text=Invalid' },
                     'driverlicense': { correct: 'https://placehold.co/120x75/18D696/FFFFFF?text=Valid', incorrect: 'https://placehold.co/120x75/D9534F/FFFFFF?text=Invalid' },
                     'militaryid': { correct: 'https://placehold.co/120x75/18D696/FFFFFF?text=Valid', incorrect: 'https://placehold.co/120x75/D9534F/FFFFFF?text=Invalid' },
                     'other': { correct: 'https://placehold.co/120x75/18D696/FFFFFF?text=Valid', incorrect: 'https://placehold.co/120x75/D9534F/FFFFFF?text=Invalid' },
-                    'face': { correct: 'https://vaytieudung.github.io/shinhanbank/lib/IMG_3266.PNG', incorrect: 'https://vaytieudung.github.io/shinhanbank/lib/IMG_3268.PNG' }
+                    'face': { correct: '/lib/IMG_3266.PNG', incorrect: '/lib/IMG_3268.PNG' }
                 },
                 i18n: {
                     vi: {
