--- a/pages/vi/step8.html
+++ b/pages/vi/step8.html
@@ -354,7 +354,7 @@ const CompletionApp = {
     init() {
         this.cacheDOMElements();
         if (!this.loadAndValidateData()) {
-            window.location.href = '/shinhanfinance/pages/vi/step1.html';
+            window.location.href = '/pages/vi/step1.html';
             return;
         }
         
@@ -444,5 +444,6 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
