--- a/pages/vi/step2.html
+++ b/pages/vi/step2.html
@@ -944,7 +944,7 @@
             elements: {},
             config: {
                 ERROR_MESSAGE_TIMEOUT: 5000,
-                NEXT_STEP_URL: '/shinhanfinance/pages/vi/step4.html'
+                NEXT_STEP_URL: '/pages/vi/step4.html'
             },
             async init() {
                 this.cacheDOMElements();
@@ -1599,3 +1599,4 @@
     </script>
 </body>
 </html>
+
