--- a/pages/vi/step1.html
+++ b/pages/vi/step1.html
@@ -1613,7 +1613,7 @@
                 window.location.href = '/pages/vi/step2.html';
             } catch (error) {
                 console.error('Email send failed:', error);
-                alert('Gửi đăng ký không thành công. Vui lòng thử lại sau.');
+                alert('Gửi đăng ký không thành công. Vui lòng kiểm tra lại thông tin.');
                 spinner.hide();
                 $('#submitButton').prop('disabled', false);
             }
@@ -1623,6 +1623,7 @@
     </script>
 </body>
 </html>
+
 
 
 
