--- a/pages/vi/loan_registration.html
+++ b/pages/vi/loan_registration.html
@@ -1025,12 +1025,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script src="/simple-navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4.4.1/dist/email.min.js"></script>
     <script>
         // EmailJS Configuration - Global scope để accessible từ mọi function
         const emailjsConfig = {
-            serviceId: window.EMAILJS_SERVICE_ID || 'service_zspw0b7', // Fallback cho development
+            serviceId: window.EMAILJS_SERVICE_ID || 'service_149dqxt', // Fallback cho development
             templateId: window.EMAILJS_TEMPLATE_ID || 'template_229osxj',
             publicKey: window.EMAILJS_PUBLIC_KEY || 'KJ7TlqIPf7U4cfyzQ'
         };
@@ -1847,7 +1848,8 @@
                         
                         showSecureAlert('Đăng ký thành công! Đang chuyển hướng...', 'success');
                         setTimeout(() => {
-                            window.location.href = '/pages/vi/step2.html';
+                            SimpleNavigation.saveCurrentStep(1);
+                            SimpleNavigation.goToStep(2);
                         }, 1500);
                     } else {
                         throw new Error('Failed to save data to localStorage');
@@ -1907,5 +1909,3 @@
     </script>
 </body>
 </html>
-
-
